--- a/templates/setting.html
+++ b/templates/setting.html
@@ -50,7 +50,7 @@
                             <div class="field">
                                 <label class="label" for="password">Password:</label>
                                 <div class="control">
-                                    {{ form.name(id="password", type="text", class="input", placeholder="", value=user.password) }}
+                                    {{ form.password(id="password", type="text", class="input", placeholder="", value=user.password) }}
                                     <ul>
                                         {% for error in form.password.errors %}
                                             <li class="has-text-danger"> {{ error }}</li>
@@ -62,7 +62,7 @@
                             <div class="field">
                                 <label class="label" for="email">Email Address:</label>
                                 <div class="control">
-                                    {{ form.name(id="email", type="text", class="input", placeholder="", value=user.email) }}
+                                    {{ form.email(id="email", type="text", class="input", placeholder="", value=user.email) }}
                                     <ul>
                                         {% for error in form.email.errors %}
                                             <li class="has-text-danger"> {{ error }}</li>
@@ -74,7 +74,7 @@
                             <div class="field">
                                 <label class="label" for="phone_number">Phone Number:</label>
                                 <div class="control">
-                                    {{ form.name(id="phone_number", type="text", class="input", placeholder="", value=user.phone_number) }}
+                                    {{ form.phone_number(id="phone_number", type="text", class="input", placeholder="", value=user.phone_number) }}
                                     <ul>
                                         {% for error in form.phone_number.errors %}
                                             <li class="has-text-danger"> {{ error }}</li>
