--- a/templates/success-user.html
+++ b/templates/success-user.html
@@ -11,7 +11,7 @@
             <div class='content has-text-centered'>
                 <h1>Successfully Updated Account!</h1>
                 <br>
-                <a class='button is-light' href="/me/settings/success">
+                <a class='button is-light' href="/me/settings">
                     View Account
                 </a>
             </div>
