--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -106,7 +106,7 @@
             <div class="modal-background"></div>
             <div class="modal-card box" style="padding: 3em;">
                 <p class="title is-3 has-text-weight-bold has-text-centered">Invalid Credentials</p>
-                <p class="has-text-centered">We couldn't log you in as the <b>provided Email address or Password is
+                <p class="has-text-centered">Couldn't log you in as the <b>provided Email address or Password is
                     incorrect</b>.<br><small>If you have trouble logging in, please reset your password.</small></p>
                 <br>
                 <a onclick="$('#accFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
