--- a/templates/auth/logout.html
+++ b/templates/auth/logout.html
@@ -25,7 +25,8 @@
             <h1 class="title">See you again soon!</h1>
             <h3 class="subtitle">You have been successfully logged out.</h3>
             <a href="{{ url_for('home') }}" class="button is-light"><i class="fas fa-home"></i>&ensp;Return to homepage</a>
-            <a href="{{ url_for('login') }}" class="button is-primary is-light"><i class="fas fa-sign-in-alt"></i>&ensp;Login again</a>
+            <a href="{{ url_for('login') }}" class="button is-primary is-light"><i class="fas fa-sign-in-alt"></i>&ensp;Login
+                again</a>
         </div>
     </section>
 
