--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -116,16 +116,18 @@
     {% endif %}
 
     {% if denied_access %}
-    <div id="accFailedModal" class="modal is-active">
-        <div class="modal-background"></div>
-        <div class="modal-card box" style="padding: 3em;">
-            <p class="title is-3 has-text-weight-bold has-text-centered">Login to continue</p>
-            <p class="has-text-centered">We will need you login in order to continue to your destination.<br><small class="has-text-grey">If you are constantly getting this error, please check that you have allowed first party cookies.</small></p>
-            <br>
-            <a onclick="$('#accFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
-                    class="fas fa-sign-in-alt"></i>&ensp;Proceed to login</a>
+        <div id="accFailedModal" class="modal is-active">
+            <div class="modal-background"></div>
+            <div class="modal-card box" style="padding: 3em;">
+                <p class="title is-3 has-text-weight-bold has-text-centered">Login to continue</p>
+                <p class="has-text-centered">We will need you login in order to continue to your destination.<br><small
+                        class="has-text-grey">If you are constantly getting this error, please check that you have
+                    allowed first party cookies.</small></p>
+                <br>
+                <a onclick="$('#accFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
+                        class="fas fa-sign-in-alt"></i>&ensp;Proceed to login</a>
+            </div>
         </div>
-    </div>
-{% endif %}
+    {% endif %}
 
 {% endblock %}
